--- a/_blueprint/_footer.html
+++ b/_blueprint/_footer.html
@@ -1,22 +1,9 @@
-<footer role="contentinfo">
-	
-	<div class="wrap">
-		
-		<div class="core">
-			
-			<p>
-				<span>The Register-Guard <span>•</span></span>
-				<span><a href="http://g.co/maps/h6sgk">3500 Chad Drive</a> • Eugene, OR • 97408 <span>/</span></span>
-				<span>(541) 485-1234 <span>/</span> <a href="mailto:feedback@registerguard.com">Feedback</a></span>
-			</p>
-			
-			<p>
-				<span>Copyright © 1996–2017 <span>/</span></span>
-				<span><a href="http://projects.registerguard.com/pages/terms-of-use/">Terms</a> / <a href="http://projects.registerguard.com/pages/privacy-statement/">Privacy</a> / <a href="http://projects.registerguard.com/pages/copyright/">Copyright</a></span>
-			</p>
-			
-		</div> <!-- /.core -->
-		
-	</div> <!-- /.wrap -->
-	
+<footer id="footer">
+	<div id="bd_press">
+		<div class="logo">
+			<a href="http://mediakit.registerguard.com/" target="_blank"><img src="http://uploads.registerguard.com/website-assets/rgmedia-footer-dark.png"></a>
+		</div>
+		<p><span>The Register-Guard <span class="bat_break">•</span></span> <span><a href="http://g.co/maps/h6sgk">3500 Chad Drive</a> • Eugene, OR • 97408 <span class="bat_break">/</span></span> <span>(541) 485-1234 <span>/</span> <a href="mailto:feedback@registerguard.com">Feedback</a></span></p>
+		<p><span>Copyright © 2017 <span class="bat_break">/</span></span> <span><a href="http://projects.registerguard.com/pages/terms-of-use/">Terms</a> <span>/</span> <a href="http://projects.registerguard.com/pages/privacy-statement/">Privacy</a> <span>/</span> <a href="http://projects.registerguard.com/pages/copyright/">Copyright</a></span></p>
+	</div>
 </footer>
