--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 {% extends '_base.html' %}
 {% from '_macros.html' import barhead, photoside %}
 
+{#
 {% block extra_css %}
 <style>
 	/* stuff here */
 </style>
 {% endblock extra_css %}
+#}
 
 {% block header %}
 <div id="header">
@@ -25,7 +27,7 @@
 					<span class="off">Share on Facebook</span>
 				</a>
 			
-				<a title="Tweet this" class="social social-twitter fa-stack fa-lg" href="https://twitter.com/intent/tweet?text=Eclipse%202017%20%7C%20Coverage%20of%20Oregon's%20view%20of%20the%202017%20solar%20eclipse&amp;url=http%3A%2F%2Fcloud.registerguard.com%2Feclipse%2F&amp;via=registerguard" target="_blank" rel="nofollow">
+				<a title="Tweet this" class="social social-twitter fa-stack fa-lg" href="https://twitter.com/intent/tweet?text=Eclipse%202017%20%7C%20Coverage%20of%20the%202017%20solar%20eclipse%20above%20Oregon&amp;url=http%3A%2F%2Fcloud.registerguard.com%2Feclipse%2F&amp;via=registerguard" target="_blank" rel="nofollow">
 					<i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i><i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
 					<span class="off">Tweet this</span>
 				</a>
@@ -67,7 +69,7 @@
 			<p>Would-be viewers that can't make it into place for the eclipse will still be able to see a partial eclipse of 90 percent or more throughout the state.</p>
 			<p>Regardless of where you are in Oregon, experts are cautioning observers to not look directly at the sun without <a href="https://eclipse2017.nasa.gov/safety">proper eye protection</a>. Only during "totality" is it safe to look at an eclipse without specialized glasses.</p>
 			<p>The Register-Guard with have several reporters and photographers spread throughout the state to bring you the latest information. If you're not able to witness the eclipse in totality, be sure to follow along as we share photos and reports. If you are able to see the event, check back for a full recap in the afternoon.</p>
-			<p class="off-credit">Background photo: An eclipse on July 11, 2010 captured by Jay M. Pasachoff, Muzhou Lu, and Craig Malamut Williams College Eclipse Expedition. (NASA)</p> 
+			<p class="off-credit">Background photo: An eclipse on July 11, 2010 captured by Jay M. Pasachoff, Muzhou Lu, and Craig Malamut Williams College Eclipse Expedition. (Williams College/<a href="https://www.nasa.gov/topics/solarsystem/sunearthsystem/main/News071510-Eclipse-composite.html" target="_blank">NASA</a>)</p> 
 		</section><!-- /#intro -->
 		{#
 		<hr>
