--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 		<section id="intro">
 			<h3 class="head">Introduction</h3>
 			<p>Those in the right spot just after 10 a.m. on Monday, Aug. 21 will be treated to a rare sight. The shadow of the Moon will move from the north-central Oregon coast, over Corvallis and Salem, right through Madras, and out of the state into Idaho before 10:30.</p>
+			<div id="countdown"></div>
 			<p>Getting into place might be tricky, however, thanks to the <a href="http://registerguard.com/rg/news/local/35704820-75/eclipse-apocalypse.html.csp">one million estimated visitors</a> to the state. Heavy traffic is expected within the path of totality, the 70-mile-wide swath where a full solar eclipse will be visible. Campsites in and near the path have been <a href="http://registerguard.com/rg/news/local/35499966-75/new-oregon-eclipse-campsites-quickly-sell-out.html.csp">booked</a> for months, even after state parks officials opened up an extra 1,000 spots. Likewise, hotel rooms have been in high demand.</p>
 			<p>Would-be viewers that can't make it into place for the eclipse will still be able to see a partial eclipse of 90 percent or more throughout the state.</p>
 			<p>Regardless of where you are in Oregon, experts are cautioning observers to not look directly at the sun without <a href="https://eclipse2017.nasa.gov/safety">proper eye protection</a>. Only during "totality" is it safe to look at an eclipse without specialized glasses.</p>
