--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="off">Share on Facebook</span>
 				</a>
 
-				<a title="Tweet this" class="social social-twitter fa-stack fa-lg" href="https://twitter.com/intent/tweet?text=Eclipse%202017%20%7C%20Coverage%20of%20the%202017%20solar%20eclipse%20above%20Oregon&amp;url=http%3A%2F%2Fcloud.registerguard.com%2Feclipse%2F&amp;via=registerguard" target="_blank" rel="nofollow">
+				<a title="Tweet this" class="social social-twitter fa-stack fa-lg" href="https://twitter.com/intent/tweet?text=Coverage%20of%20the%202017%20solar%20eclipse%20above%20Oregon%20%7C%20%23Eclipse2017&amp;url=http%3A%2F%2Fcloud.registerguard.com%2Feclipse%2F&amp;via=registerguard" target="_blank" rel="nofollow">
 					<i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i><i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
 					<span class="off">Tweet this</span>
 				</a>
@@ -108,7 +108,7 @@
 	<div class="flex-right">
 		<section id="resources">
 			<h3 class="head">Resources</h3>
-			<ul>
+			<ul class="li1">
 			{% for r in resources %}
 				{% if r.status == 'on' %}
 					<li><a href="{{ r.url }}" target="_blank">{{ r.info }}</a></li>
