--- a/_blueprint/_base.html
+++ b/_blueprint/_base.html
@@ -188,7 +188,7 @@
 			'dimension2':'{{ slug }}',
 			'dimension3':'{{ pubdate }}',
 			'dimension4':'{{ url }}',
-			'dimension5':'{{ opengraph_description }}'
+			'dimension5':'{{ og_description }}'
 		});
 	</script>
 	<!-- [END] Analytics -->
