Add toggle event

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				</a>
 
-				<a title="Eclipse mode" class="social eclipse fa-stack fa-lg" href="#eclipse" rel="nofollow" onClick="toggle();return false;">
+				<a title="Eclipse mode" class="social eclipse fa-stack fa-lg" href="#eclipse" rel="nofollow" onClick="toggle();ga('send', 'event', 'eclipse', 'eclipse-mode', 'toggle');">
 					<i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i><i id="do-not-press" class="fa fa-moon-o fa-stack-1x fa-inverse" aria-hidden="true"></i>
 					<span class="off">Eclipse mode</span>
 
