Add gallery option
Closes #1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
 
 	{% if hero == 'gallery' %}
-		<div id="slideshow"><div id="slideshow-inner"></div></div>
+		<div id="gallery"><div id="gallery-inner"></div></div>
 	{% else %}
 		<div id="eclipse-map"></div>
 	{% endif %}
