Add map below if gallery

--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
 	</div><!-- /.right -->
 </div><!-- /.flex -->
 
+{% if hero == 'gallery' %}
+	<div id="eclipse-map"></div>
+{% endif %}
+
 <div class="tagline">
 	<hr>
 	<p>Page designed by <a href="mailto:rob.denton@registerguard.com">Rob Denton</a>. Follow him on Twitter <a href="http://twitter.com/robertrdenton">@robertrdenton</a>.</p>
