--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		{% if ads == 1 %}
 		<hr>
 		<!-- //////////////////// Medium Rectangle 1 \\\\\\\\\\\\\\\\\\\\ -->
-		<h3 class="head">Advertisement</h3>
+		<p class="tip">Advertisement</p>
 		<div class="advert">
 			<div id="medium-rectangle-1">
 				<script>googletag.cmd.push(function() { googletag.display('medium-rectangle-1'); });</script>
@@ -123,7 +123,7 @@
 		</section><!-- /#resources -->
 		<hr>
 		<section id="videos">
-			<h3 class="head">Eclipse 101 videos</h3>
+			<h3 class="head">Eclipse videos</h3>
 			{% if brightcove_or_youtube == 'BC' %}
 				<div style="display: block; position: relative; max-width: 100%; margin-top: 10px;">
 					<div style="padding-top: 56.25%;">
@@ -184,7 +184,7 @@
 		{% if ads == 1 %}
 		<hr>
 		<!-- //////////////////// Medium Rectangle 2 \\\\\\\\\\\\\\\\\\\\ -->
-		<h3 class="head">Advertisement</h3>
+		<p class="tip">Advertisement</p>
 		<div class="advert">
 			<div id="medium-rectangle-2">
 				<script>googletag.cmd.push(function() { googletag.display('medium-rectangle-2'); });</script>
