Back to Friday version.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 		<div class="core">
 
-			<h2>Oregon solar eclipse 2017</h2>
-			<h1>Watching the view of a lifetime</h1>
+			<h2>View of a lifetime</h2>
+			<h1>Coverage of the 2017 total solar eclipse above Oregon</h1>
 
 			<div class="sharing">
 
